  Each implementing PlacementPlugin provides a way of weighting Solr Nodes, and the OrderedNodePlacement plugin
  then uses the weights to decide the optimal strategy for placing new replicas or balancing existing replicas.
  (Houston Putman, Tomás Fernández Löbbe, Jason Gerlowski, Radu Gheorghe)

Optimizations
---------------------

* SOLR-16694: Shortcut Http2SolrClient mimeType check for default response parse (Tomás Fernández Löbbe, Alex Deparvu)

* SOLR-16692: Allow setting the a CookieStore implementation in Http2SolrClient. When Cookies are not needed, this can be set to
  `org.eclipse.jetty.util.HttpCookieStore.Empty`, which avoids some of the processing that happens in the default `java.net.InMemoryCookieStore`.
  Solr can also be started with the system property `solr.http.disableCookies` set to `true`, so that the internal clients
  that Solr uses to communicate between nodes use `HttpCookieStore.Empty`. (Tomás Fernández Löbbe)

* SOLR-16693: For query timeAllowed, switch from ExitableDirectoryReader to TimeLimitingBulkScorer (David Smiley)

* SOLR-16764: Clarify that ExportTool exports documents in JSON with Lines format, not standard JSON.  Add explicit -compress option for gzipping output.
  Add ability to specific a directory for output along with a specific file when using -out. (Eric Pugh)

* SOLR-14630: When querying with the `_route_` or `shards.preference` parameter and if there are multiple replicas for a
  collection on the receiving node, there was sometimes an extra HTTP hop or the non-intended replica may receive the
  request. SolrJ will now form the URL directly to the intended replica of the collection (and not the collection itself).
  (Pierre Salagnac, Ivan Djurasevic, Jason Baik)

* SOLR-16273: Improve the performance of the Prometheus Metric Exporter scraping metrics (Matthew Biscocho via David Smiley & Christine Poerschke

Bug Fixes
---------------------
